--- a/requirements.txt
+++ b/requirements.txt
@@ -1,60 +1,100 @@
-astred~=0.9.7
-bpemb==0.3.3
-certifi==2021.10.8
-charset-normalizer==2.0.12
-click==8.0.4
-conllu==4.4.1
-cycler==0.11.0
-Deprecated==1.2.13
-filelock==3.6.0
-flair==0.10
-fonttools==4.29.1
-ftfy==6.1.1
-gdown==3.12.2
-gensim==4.1.2
-huggingface-hub==0.4.0
-idna==3.3
-importlib-metadata==3.10.1
-Janome==0.4.1
-joblib==1.1.0
-kiwisolver==1.3.2
-konoha==4.6.5
+accelerate==0.32.1
+apted==1.0.3
+astred==0.9.7
+awesome_align @ git+https://github.com/BramVanroy/awesome-align.git@b6360c218166d86854808398507905709b86036b
+beautifulsoup4==4.12.3
+boto3==1.34.143
+botocore==1.34.143
+bpemb==0.3.5
+cchardet==2.1.7
+certifi==2024.7.4
+charset-normalizer==3.3.2
+click==8.1.7
+conllu==4.5.3
+contourpy==1.2.1
+cycler==0.12.1
+Cython==3.0.10
+Deprecated==1.2.14
+filelock==3.15.4
+flair==0.13.1
+fonttools==4.53.1
+fsspec==2024.6.1
+ftfy==6.2.0
+gdown==5.2.0
+gensim @ git+https://github.com/piskvorky/gensim.git@dc5b5c48e7454fe22cf98ddac60ff85107226f6a
+huggingface-hub==0.23.4
+idna==3.7
+importlib_metadata==8.0.0
+Janome==0.5.0
+Jinja2==3.1.4
+jmespath==1.0.1
+joblib==1.4.2
+kiwisolver==1.4.5
+konoha==5.5.6
 langdetect==1.0.9
-lxml==4.8.0
-matplotlib==3.5.1
+lxml==5.2.2
+MarkupSafe==2.1.5
+matplotlib==3.9.1
 mecab-python==1.0.0
-more-itertools==8.8.0
-mpld3==0.3
-numpy==1.22.2
-overrides==3.1.0
-packaging==21.3
-Pillow==9.0.1
-pyparsing==3.0.7
+mecab-python3==1.0.9
+more-itertools==10.3.0
+mpld3==0.5.10
+mpmath==1.3.0
+networkx==3.3
+nltk==3.8.1
+numpy==1.26.4
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.20.5
+nvidia-nvjitlink-cu12==12.5.82
+nvidia-nvtx-cu12==12.1.105
+overrides==7.7.0
+packaging==24.1
+pillow==10.4.0
+pptree==3.1
+protobuf==5.27.2
+psutil==6.0.0
+pyparsing==3.1.2
 PySocks==1.7.1
-python-dateutil==2.8.2
-PyYAML==6.0
-regex==2022.1.18
-requests==2.27.1
-sacremoses==0.0.47
-scikit-learn==1.0.2
-scipy==1.8.0
+python-dateutil==2.9.0.post0
+pytorch_revgrad==0.2.0
+PyYAML==6.0.1
+regex==2024.5.15
+requests==2.32.3
+s3transfer==0.10.2
+sacremoses==0.1.1
+safetensors==0.4.3
+scikit-learn==1.5.1
+scipy==1.14.0
 segtok==1.5.11
-sentencepiece==0.1.95
+semver==3.0.2
+sentencepiece==0.2.0
+setuptools==70.3.0
 six==1.16.0
-smart-open==5.2.1
+smart-open==7.0.4
 sortedcontainers==2.4.0
-sqlitedict==1.7.0
-tabulate==0.8.9
-threadpoolctl==3.1.0
-tokenizers==0.11.5
-torch==1.10.2
-tqdm==4.62.3
-transformers==4.16.2
-typing-extensions==4.1.1
-Unidecode==1.3.3
-urllib3==1.26.8
-wcwidth==0.2.5
-Wikipedia-API==0.5.4
-wrapt==1.13.3
-zipp==3.7.0
-git+https://github.com/BramVanroy/awesome-align.git@astred_compat
+soupsieve==2.5
+sqlitedict==2.1.0
+sympy==1.13.0
+tabulate==0.9.0
+threadpoolctl==3.5.0
+tokenizers==0.19.1
+torch==2.3.1
+tqdm==4.66.4
+transformer-smaller-training-vocab==0.4.0
+transformers==4.42.4
+typing_extensions==4.12.2
+Unidecode==1.3.8
+urllib3==1.26.19
+wcwidth==0.2.13
+wheel==0.43.0
+Wikipedia-API==0.6.0
+wrapt==1.16.0
+zipp==3.19.2
